about section  continue..

--- a/main/project/index.html
+++ b/main/project/index.html
@@ -27,9 +27,9 @@
     <main
         class="relative after:-left-24 after:absolute after:content-[''] grid lg:grid-cols-[45%_55%] grid-rows-[40%_60%] lg:grid-rows-1 lg:after:bg-yellow-400 after:w-1/4 after:skew-x-12 :max-w-[90%] h-svh after:h-full overflow-hidden lg ">
 
-        <div class="relative z-50 flex justify-center items-center my-auto">
+        <div class="relative z-50 flex justify-center items-center my-auto ">
             <img src="./image/person_1.jpg" alt="profile image"
-                class="lg:ml-10 rounded-full lg:rounded-md lg:w-[80%] h-[200px] lg:h-[calc(100vh-90px)] aspect-square object-cover">
+                class=" lg:ml-10 rounded-full lg:rounded-md lg:w-[80%] h-[200px] lg:h-[calc(100vh-90px)] aspect-square object-cover">
         </div>
 
 
@@ -131,7 +131,7 @@
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
                         <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">12<sup>+</sup></p>
                         <p
-                            class="relative text-sm md:text-l md:text-[17px]  before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] ">
+                            class="relative text-sm  md:text-[17px]  before:top-3 left-5  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] ">
                             YEARS OF
                             <span class="">EXPERIENCE</span>
                         </p>
@@ -140,21 +140,21 @@
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
                         <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">97<sup>+</sup></p>
                         <p
-                            class="relative text-sm md:text-[17px]  before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap object-cover">
+                            class="relative text-sm md:text-[17px]  before:top-3 left-5  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap object-cover">
                             COMPLETED <span> PROJECTS</span></p>
                     </div>
 
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
                         <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">81<sup>+</sup></p>
                         <p
-                            class="relative text-sm md:text-[17px]  before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
+                            class="relative text-sm md:text-[17px]  before:top-3 left-5  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
                             HAPPY <span> CUSTOMERS</span></p>
                     </div>
 
                     <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border text-wrap">
                         <p class="text-3xl sm:text-5xl md:text-6xl text-yellow-400">53<sup>+</sup></p>
                         <p
-                            class="relative text-sm md:text-[17px] before:top-3 left-10  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
+                            class="relative text-sm md:text-[17px] before:top-3 left-5  md:left-12 before:-left-6 lg:before:-left-10 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-wrap">
                             AWARDS WON</p>
                     </div>
 
@@ -169,7 +169,7 @@
   height: 1px;">
 
         <!-- skills section start  -->
-        <div class="">
+        <div class=" mb-24">
             <p class="uppercase text-center font-bold text-xl sm:text-2xl md:text-3xl lg:text-4xl text-white my-[5%]">my
                 skills</p>
             <div class="grid h-full m-auto grid-cols-2 md:grid-cols-4  lg:grid-cols-4 lg:grid-rows-2 w-[90%] gap-16">
@@ -178,7 +178,7 @@
 
                 <div class=" flex flex-col justify-center items-center  ">
 
-                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['90%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full  before:absolute before:content-['90%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:90%; ">
 
                     </div>
@@ -189,7 +189,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['85%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px]1 before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[120px] w-[120px] md:h-[140px] md:w-[140px] rounded-full before:absolute before:content-['85%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:85%; ">
 
                     </div>
@@ -201,7 +201,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['80%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full before:absolute before:content-['80%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:80%; ">
 
                     </div>
@@ -212,7 +212,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['90%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full before:absolute before:content-['90%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px]  before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:90%; ">
 
                     </div>
@@ -223,7 +223,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['50%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full before:absolute before:content-['50%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px]  before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:50%; ">
 
                     </div>
@@ -234,18 +234,18 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative border-2 border-yellow-400 h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full  bg-slate-900 before:absolute before:content-['0%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative  h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full  before:absolute before:content-['0%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px]  before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:0%; ">
 
                     </div>
-                    <p class="text-center text-white mt-4"> BOOTSTRAP </p> 
+                    <p class="text-center text-white mt-4"> BOOTSTRAP </p>
                 </div>
 
                 <!-- React js -->
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad border-2 border-yellow-400 relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['0%'] before:flex before:justify-center before:items-center  before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad 0 relative h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full before:absolute before:content-['0%'] before:flex before:justify-center before:items-center  before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px]  before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:0%; ">
 
                     </div>
@@ -256,7 +256,7 @@
 
                 <div class=" flex flex-col justify-center items-center">
 
-                    <div class="flex justify-center items-center grad relative h-[140px] md:h-[150px] lg:h-[200px] w-[140px] md:w-[150px] lg:w-[200px] rounded-full bg-slate-900 before:absolute before:content-['20%'] before:flex before:justify-center before:items-center before:h-[120px] md:before:h-[130px] lg:before:h-[180px] before:w-[120px] md:before:w-[130px] lg:before:w-[180px] before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
+                    <div class="flex justify-center items-center grad relative h-[120px] w-[120px] md:h-[140px] md:w-[140px]  rounded-full before:absolute before:content-['20%'] before:flex before:justify-center before:items-center before:h-[100px] before:w-[100px] before:md:h-[120px] before:md:w-[120px]  before:bg-slate-900 before:rounded-full before:text-white before:m-auto before:z-50"
                         style="--p:20%; ">
 
                     </div>
@@ -266,8 +266,49 @@
         </div>
         <!-- skills section end -->
 
+        <hr class="w-1/2 m-auto" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
+  height: 1px;">
 
+        <!--EXPERIENCE & EDUCATION Section Start  -->
+        <div class="">
+            <p class="uppercase text-white text-3xl font-bold text-center my-10"> experiences & education</p>
+            <div class="grid  grid-cols-1 lg:grid-cols-2 gap-10 w-[90%] text-white h-svh p-10 m-auto">
 
+                <!-- first section -->
+
+                <div class="w-full">
+                    <ul>
+                        <li
+                            class="relative  pl-10 h-40 before:absolute before:w-[1px] before:h-full before:content-[''] before:bg-gray-500 before:-left-0 before:top-3 -z-50">
+                            <div class="bg-yellow-400 relative -left-16 top-2 z-10 inline-block px-4 py-3 rounded-full">
+                                <i class="ri-briefcase-4-fill relative -z-40 text-xl"></i>
+                            </div>
+                            <span class="bg-gray-800 py-1 px-6 rounded-full relative -left-12">2018</span>
+                            <p class="text-xl my-4 uppercase">web developer <span>envato</span></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- second section -->
+
+                <div class="w-full">
+                    <ul>
+                        <li
+                            class="relative pl-10 h-40 before:absolute before:w-[1px] before:h-full before:content-[''] before:bg-gray-500 before:-left-0 before:top-3 -z-50">
+                            <div class="bg-yellow-400 relative -left-16 top-2 z-10 inline-block px-4 py-3 rounded-full">
+                                <i class="ri-graduation-cap-fill relative -z-40 text-xl"></i>
+                            </div>
+                            <span class="bg-gray-800 py-1 px-6 rounded-full relative -left-12">2015</span>
+                            <p class="text-xl my-4 uppercase">engineer degree <span>oxford univercity</span></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!--EXPERIENCE & EDUCATION Section End  -->
+        </div>
 
         <!-- about main div end-->
     </div>
