--- a/main/project/index.html
+++ b/main/project/index.html
@@ -76,10 +76,10 @@
         <!-- resume text section start -->
 
         <div
-            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-bold text-slate-800 md:text-9xl text-opacity-0 md:text-opacity-100">
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
             RESUME
-            <div class="top-0 absolute text-white text-xl md:text-5xl">
-                ABOUT<span class="text-yellow-400">ME</span>
+            <div class=" md:top-0 absolute text-white text-xl md:text-5xl lg:text-[50px]">
+                ABOUT <span class="text-yellow-400">ME</span>
             </div>
         </div>
         <!-- resume text section end -->
@@ -90,14 +90,14 @@
         <br>
         <div class="m-[5%]">
 
-            <div class="flex md:flex-row flex-col justify-around items-center gap-4 my-8 font-bold text-slate-400">
+            <div class="flex lg:flex-row flex-col justify-around items-center gap-4 my-8 font-bold text-slate-400">
 
-                <div class="flex flex-col gap-4 md:m-0 mb-8 w-full">
+                <div class="flex flex-col gap-4 lg:m-0 mb-8 w-full">
 
                     <p class="font-bold text-3xl text-slate-400 uppercase">
                         Personal Info
                     </p>
-                    <div class="grid grid-cols-2 leading-10">
+                    <div class="grid grid-cols-1 md:grid-cols-2 leading-10 max-sm:text-sm">
                         <div class="text-slate-400">
                             <p>First Name : <span class="text-white">Chetan</span></p>
                             <p>Last Name : <span class="text-white">Davra</span></p>
@@ -126,35 +126,35 @@
                     </div>
                 </div>
 
-                <div class="gap-4 grid grid-cols-2 w-full">
+                <div class="gap-8 grid grid-cols-2 w-full">
 
-                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
+                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border rounded-md">
                         <p class="text-3xl text-yellow-400 sm:text-5xl md:text-6xl">12<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm md:text-[17px]">
+                            class="relative before:top-3 max-sm:left-0 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm md:text-[17px]  max-sm:before:hidden">
                             YEARS OF
                             <span class="">EXPERIENCE</span>
                         </p>
                     </div>
 
-                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
+                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border rounded-md">
                         <p class="text-3xl text-yellow-400 sm:text-5xl md:text-6xl">97<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm text-wrap md:text-[17px] object-cover">
+                            class="relative before:top-3 max-sm:left-0 left-5  md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm text-wrap md:text-[17px] max-sm:before:hidden">
                             COMPLETED <span> PROJECTS</span></p>
                     </div>
 
-                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border">
+                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border rounded-md">
                         <p class="text-3xl text-yellow-400 sm:text-5xl md:text-6xl">81<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm text-wrap md:text-[17px]">
+                            class="relative before:top-3 max-sm:left-0 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm text-wrap md:text-[17px] max-sm:before:hidden">
                             HAPPY <span> CUSTOMERS</span></p>
                     </div>
 
-                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border text-wrap">
+                    <div class="flex flex-col gap-4 border-slate-400 p-2 md:p-4 border rounded-md">
                         <p class="text-3xl text-yellow-400 sm:text-5xl md:text-6xl">53<sup>+</sup></p>
                         <p
-                            class="relative before:top-3 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm text-wrap md:text-[17px]">
+                            class="relative before:top-3 max-sm:left-0 left-5 md:left-12 lg:before:-left-10 before:-left-6 before:absolute before:content-[''] before:bg-white before:w-[8%] before:h-[1px] text-sm text-wrap md:text-[17px] max-sm:before:hidden">
                             AWARDS WON</p>
                     </div>
 
@@ -271,21 +271,24 @@
 
         <!--EXPERIENCE & EDUCATION Section Start  -->
         <div class="">
-            <p class="my-10 font-bold text-3xl text-center text-white uppercase"> experiences & education</p>
-            <div class="gap-10 grid grid-cols-1 lg:grid-cols-2 m-auto p-10 w-[90%] h-svh text-white">
+            <p class=" mt-10 md:my-10 font-bold text-3xl text-center text-white uppercase"> experiences & education</p>
+            <div class="gap-10 grid grid-cols-1 lg:grid-cols-2 m-auto p-10 w-[90%]  text-white">
 
                 <!-- first section -->
 
-                <div class="w-full">
+                <div class="grid grid-cols-1 w-full">
                     <ul>
                         <li
                             class="relative before:top-3 before:-left-0 -z-50 before:absolute before:content-[''] before:bg-gray-500 mb-14 pl-10 before:w-[1px] h-40 before:h-full">
                             <div class="inline-block relative top-2 -left-16 z-10 bg-yellow-400 px-4 py-3 rounded-full">
                                 <i class="relative -z-40 text-xl ri-briefcase-4-fill"></i>
                             </div>
-                            <span class="relative -left-12 bg-gray-800 px-6 py-1 rounded-full">2018</span>
-                            <p class="my-4 text-xl uppercase">web developer <span>envato</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                            <span
+                                class="relative text-sm top-1 md:top-0 -left-12 bg-gray-800 px-6 py-1 rounded-full">2018</span>
+                            <p class="my-4 text-sm md:text-xl uppercase">web developer <span>envato</span></p>
+                            <p class="text-sm md:text-[16px]">Lorem ipsum dolor sit amet, consectetur tempor incididunt
+                                ut labore
+                                adipisicing elit</p>
                         </li>
 
                         <li
@@ -293,9 +296,11 @@
                             <div class="inline-block relative top-2 -left-16 z-10 bg-yellow-400 px-4 py-3 rounded-full">
                                 <i class="relative -z-40 text-xl ri-briefcase-4-fill"></i>
                             </div>
-                            <span class="relative -left-12 bg-gray-800 px-6 py-1 rounded-full">2018</span>
-                            <p class="my-4 text-xl uppercase">web developer <span>envato</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                            <span
+                                class="relative text-sm top-1 md:top-0 -left-12 bg-gray-800 px-6 py-1 rounded-full">2018</span>
+                            <p class="my-4 text-sm md:text-xl uppercase">web developer <span>envato</span></p>
+                            <p class="text-sm md:text-[16px]">Lorem ipsum dolor sit amet, consectetur tempor incididunt
+                                ut labore adipisicing elit</p>
                         </li>
 
                         <li
@@ -303,9 +308,11 @@
                             <div class="inline-block relative top-2 -left-16 z-10 bg-yellow-400 px-4 py-3 rounded-full">
                                 <i class="relative -z-40 text-xl ri-briefcase-4-fill"></i>
                             </div>
-                            <span class="relative -left-12 bg-gray-800 px-6 py-1 rounded-full">2018</span>
-                            <p class="my-4 text-xl uppercase">web developer <span>envato</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                            <span
+                                class="relative text-sm top-1 md:top-0 -left-12 bg-gray-800 px-6 py-1 rounded-full">2018</span>
+                            <p class="my-4 text-sm md:text-xl uppercase">web developer <span>envato</span></p>
+                            <p class="text-sm md:text-[16px]">Lorem ipsum dolor sit amet, consectetur tempor incididunt
+                                ut labore adipisicing elit</p>
                         </li>
                     </ul>
                 </div>
@@ -319,9 +326,12 @@
                             <div class="inline-block relative top-2 -left-16 z-10 bg-yellow-400 px-4 py-3 rounded-full">
                                 <i class="relative -z-40 ri-graduation-cap-fill text-xl"></i>
                             </div>
-                            <span class="relative -left-12 bg-gray-800 px-6 py-1 rounded-full">2015</span>
-                            <p class="my-4 text-xl uppercase">engineer degree <span>oxford univercity</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                            <span
+                                class="relative text-sm top-1 md:top-0 -left-12 bg-gray-800 px-6 py-1 rounded-full">2015</span>
+                            <p class="my-4 text-sm md:text-xl uppercase">engineer degree <span>oxford univercity</span>
+                            </p>
+                            <p class="text-sm md:text-[16px]">Lorem ipsum dolor sit amet, consectetur tempor incididunt
+                                ut labore adipisicing elit</p>
                         </li>
 
                         <li
@@ -329,9 +339,12 @@
                             <div class="inline-block relative top-2 -left-16 z-10 bg-yellow-400 px-4 py-3 rounded-full">
                                 <i class="relative -z-40 ri-graduation-cap-fill text-xl"></i>
                             </div>
-                            <span class="relative -left-12 bg-gray-800 px-6 py-1 rounded-full">2015</span>
-                            <p class="my-4 text-xl uppercase">engineer degree <span>oxford univercity</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                            <span
+                                class="relative text-sm top-1 md:top-0 -left-12 bg-gray-800 px-6 py-1 rounded-full">2015</span>
+                            <p class="my-4 text-sm md:text-xl uppercase">engineer degree <span>oxford univercity</span>
+                            </p>
+                            <p class="text-sm md:text-[16px]">Lorem ipsum dolor sit amet, consectetur tempor incididunt
+                                ut labore adipisicing elit</p>
                         </li>
 
                         <li
@@ -339,9 +352,12 @@
                             <div class="inline-block relative top-2 -left-16 z-10 bg-yellow-400 px-4 py-3 rounded-full">
                                 <i class="relative -z-40 ri-graduation-cap-fill text-xl"></i>
                             </div>
-                            <span class="relative -left-12 bg-gray-800 px-6 py-1 rounded-full">2015</span>
-                            <p class="my-4 text-xl uppercase">engineer degree <span>oxford univercity</span></p>
-                            <p>Lorem ipsum dolor sit amet, consectetur tempor incididunt ut labore adipisicing elit</p>
+                            <span
+                                class="relative text-sm top-1 md:top-0 -left-12 bg-gray-800 px-6 py-1 rounded-full">2015</span>
+                            <p class="my-4 text-sm md:text-xl uppercase">engineer degree <span>oxford univercity</span>
+                            </p>
+                            <p class="text-sm md:text-[16px]">Lorem ipsum dolor sit amet, consectetur tempor incididunt
+                                ut labore adipisicing elit</p>
                         </li>
                     </ul>
                 </div>
@@ -354,6 +370,22 @@
     </div>
 
     <!-- About Section end -->
+
+
+    <!-- Portfolio Section start -->
+
+    <div class="h-svh">
+        <div
+            class="relative flex justify-center items-center md:items-center bg-slate-700 md:bg-inherit my-[5%] w-full h-8 font-bold text-slate-800 md:text-8xl lg:text-9xl text-opacity-0 md:text-opacity-100">
+            WORKS
+            <div class="top-0 absolute text-white text-xl md:text-4xl lg:text-[50px]">
+                MY <span class="text-yellow-400">PORTFOLIO</span>
+            </div>
+        </div>
+
+        
+    </div>
+    <!-- Portfolio Section End -->
 </body>
 
 </html>
