--- a/index.html
+++ b/index.html
@@ -6,24 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-
-    
-        #grad1 {
+        /* #grad1 {
             height: 200px;
             width: 200px;
-            background-color: red;
-            /* For browsers that do not support gradients */
-            background-image: conic-gradient(red var(--p), black 20%);
+            background-color: red; */
+        /* For browsers that do not support gradients */
+
+        /* background-image: conic-gradient(red var(--p), black 20%);
+
             border-radius: 50%;
+
             position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
-        }
+        } */
 
-        #grad1::before {
+        /* #grad1::before {
             content: "90%";
             position: absolute;
+
             height: 90%;
             width: 90%;
             background-color: black;
@@ -33,6 +35,38 @@
             justify-content: center;
             color: white;
             align-items: center;
+        } */
+
+
+        #grad2 {
+            height: 200px;
+            width: 200px;
+            background-color: blue;
+            border-radius: 50%;
+            background-image: conic-gradient(rgb(49, 66, 0) var(--p), black 0%);
+            /* background-image: conic-gradient(); */
+
+            /* position: relative; */
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+
+        }
+
+        #grad2::before {
+            content: '90%';
+            height: 170px;
+            width: 170px;
+            background-color: red;
+            /* position: absolute; */
+
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
         }
     </style>
 </head>
@@ -40,10 +74,18 @@
 <body>
     <h1>Conic Gradient - Three Colors</h1>
 
-    <div id="grad1" style="--p:80%;"></div>
+    <!-- <div id="grad1" style="--p:80%;"></div>
     <div id="grad1" style="--p:70%;"></div>
     <div id="grad1" style="--p:60%;"></div>
-    <div id="grad1" style="--p:50%;"></div>
+    <div id="grad1" style="--p:50%;"></div> -->
+    <div id="grad2" style="--p:80%;"></div>
+    <div id="grad2" style="--p:70%;"></div>
+    <div id="grad2" style="--p:60%;"></div>
+    <div id="grad2" style="--p:50%;"></div>
+    <div id="grad2" style="--p:40%;"></div>
+    <div id="grad2" style="--p:30%;"></div>
+
+
 </body>
 
 </html>
