--- a/main/project/index.html
+++ b/main/project/index.html
@@ -383,7 +383,12 @@
             </div>
         </div>
 
-        
+        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 m-10">
+            <div class="">
+                <img src="image/computer.jpg" alt="" class="h-full w-fi object-cover">
+            </div>
+        </div>
+
     </div>
     <!-- Portfolio Section End -->
 </body>
