--- a/main/project/index.html
+++ b/main/project/index.html
@@ -371,6 +371,8 @@
 
     <!-- About Section end -->
 
+    <hr class="m-auto w-1/2" style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(129, 129, 129, 0.75), rgba(0, 0, 0, 0));border: 0;
+  height: 1px;">
 
     <!-- Portfolio Section start -->
 
@@ -383,10 +385,39 @@
             </div>
         </div>
 
-        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 m-10">
-            <div class="">
-                <img src="image/computer.jpg" alt="" class="h-full w-fi object-cover">
-            </div>
+        <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-4 mx-10 sm:mx-20 my-10">
+            <a href="../components/A_fullscreen_hero_section/plant.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Plant'] before:flex before:justify-center before:items-center before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/plant.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <a href="../components/background/hero_section.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Computer'] before:flex before:justify-center before:items-center before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/computer_.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+            <a href="../components/call_to_action_section/call_to_action.html">
+
+                <div
+                    class="relative   before:absolute before:content-['Call_to_Action'] before:flex before:justify-center before:items-center before:h-full before:w-full before:bg-yellow-400 rounded-md border-2 z-50 before:-translate-y-full overflow-hidden hover:before:translate-y-0 before:duration-700 cursor-pointer">
+
+                    <img src="image/ss/calltoaction.png" alt="" class="object-cover ">
+
+                </div>
+            </a>
+
+
+
         </div>
 
     </div>
